2009-03-28  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/curlserveradd.cpp, common/curlserverdelete.cpp 
	common/curlservermodifsclients.cpp and common/curlsubmitform added.

2009-03-27  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/curlgetfile.cpp, common/curlinterface.cpp,
	common/curlpersoheaderadd.cpp, common/curlpersoheaderdelete.cpp
	and common/curlposteddata.cpp files added.

2009-03-26  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/curlaccountdelete.cpp,
	curlaccounttoggleblacklist.cpp and curlfiletocml.cpp added.

2009-03-20  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/curlaccountconfirmmail.cpp added.

2009-03-20  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/chartserie.cpp, common/clientconnect.cpp
	and common/curlaccountadd.cpp added.

2009-03-19  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/chartline.cpp added.

2009-03-18  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/attributelistmodifier.cpp and 
	common/chartbase.cpp added.

2009-03-18  gettextize  <bug-gnu-gettext@gnu.org>
	
	* Makefile.in.in: New file, from gettext-0.17.
	* boldquot.sed: New file, from gettext-0.17.
	* en@boldquot.header: New file, from gettext-0.17.
	* en@quot.header: New file, from gettext-0.17.
	* insert-header.sin: New file, from gettext-0.17.
	* quot.sed: New file, from gettext-0.17.
	* remove-potcdate.sin: New file, from gettext-0.17.
	* Rules-quot: New file, from gettext-0.17.
	* POTFILES.in: New file.
